; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/gdihv/extr_proclist.c_ProcessList_Create.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/gdihv/extr_proclist.c_ProcessList_Create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8*, i32, i32 }

@LVCF_TEXT = common dso_local global i32 0, align 4
@LVCF_FMT = common dso_local global i32 0, align 4
@LVCF_WIDTH = common dso_local global i32 0, align 4
@LVCFMT_LEFT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i32] [i32 80, i32 114, i32 111, i32 99, i32 101, i32 115, i32 115, i32 0], align 4
@.str.1 = private unnamed_addr constant [10 x i32] [i32 80, i32 114, i32 111, i32 99, i32 101, i32 115, i32 115, i32 73, i32 68, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ProcessList_Create(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @LVCF_TEXT, align 4
  %6 = load i32, i32* @LVCF_FMT, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @LVCF_WIDTH, align 4
  %9 = or i32 %7, %8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32 %9, i32* %10, align 8
  %11 = load i32, i32* @LVCFMT_LEFT, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 3
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  store i8* bitcast ([8 x i32]* @.str to i8*), i8** %13, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 2
  store i32 90, i32* %14, align 8
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @ListView_InsertColumn(i32 %15, i32 0, %struct.TYPE_3__* %4)
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  store i8* bitcast ([10 x i32]* @.str.1 to i8*), i8** %17, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 2
  store i32 90, i32* %18, align 8
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @ListView_InsertColumn(i32 %19, i32 1, %struct.TYPE_3__* %4)
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @ProcessList_Update(i32 %21)
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @ListView_InsertColumn(i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @ProcessList_Update(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
